--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 spring:
   application:
     name: client
+  profiles:
+    active: dev
   config:
     import: configserver:http://localhost:8888
-    
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
